--- a/index.css
+++ b/index.css
@@ -11,7 +11,6 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	background-color: red;
 }
 
 form {
@@ -25,6 +24,7 @@ form {
 }
 
 input {
+	background-color: rgba(216, 216, 216, 0.24);
 	width: 90%;
 	height: 30px;
 	border: none;
@@ -44,7 +44,7 @@ label {
 	font-weight: 500;
 }
 
-div {
+button {
 	position: absolute;
 	bottom: 50px;
 	background-color: blue;
